Setup cljs frontend

--- a/frontend-rescript/index.html
+++ b/frontend-rescript/index.html
@@ -8,6 +8,6 @@
 
   <body class="bg-white dark:bg-stone-900 dark:text-white">
     <div id="root"></div>
-    <script type="module" src="/build/app/tasky.js"></script>
+    <script type="module" src="/src/Main.res.mjs"></script>
   </body>
 </html>
