--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -4,10 +4,12 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Tasky</title>
+    <link rel="stylesheet" href="/build/lib/external.css" />
   </head>
 
   <body class="bg-white dark:bg-stone-900 dark:text-white">
     <div id="root"></div>
-    <script type="module" src="/build/app/tasky.js"></script>
+    <script src="/build/lib/external.js"></script>
+    <script src="/build/js/tasky.js"></script>
   </body>
 </html>
