--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -9,6 +9,14 @@
 
   <body class="bg-white dark:bg-stone-900 dark:text-white">
     <div id="root"></div>
+    <script type="module">
+      import mermaid from "https://cdn.jsdelivr.net/npm/mermaid@11/dist/mermaid.esm.min.mjs";
+      mermaid.initialize({
+        startOnLoad: true,
+        theme: "dark",
+      });
+      window.mermaid = mermaid;
+    </script>
     <script src="/build/lib/external.js"></script>
     <script src="/build/js/tasky.js"></script>
   </body>
